--- a/imdex.html
+++ b/imdex.html
@@ -9,3 +9,12 @@
     <h1>ashish</h1>
 </body>
 </html>
+
+code snippet
+
+$ git status
+
+$ git add index.html
+$ git status
+ 
+$ git commit -m "Your Message"
